# llm-rec-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: app.yaml  loader.py  schema.py  settings.py
configs/environments/: development.yaml  production.yaml  staging.yaml
configs/experiment/: experiments.yaml
configs/feature/: features.yaml
configs/llm/: llm.yaml
configs/model/: models.yaml
configs/monitor/: monitor.yaml
configs/pipeline/: pipeline.yaml  ranking.yaml  recall.yaml
configs/server/: server.yaml
configs/storage/: storage.yaml
docker/: Dockerfile  docker-compose.yaml
docker/conf/: prometheus.yml
docs/: MILESTONES.md  STAGE_SUMMARY.md  demand.md  index.md  technique_report.md
docs/about/: changelog.md  roadmap.md
docs/api/: chat.md  experiment.md  health.md  llm-status.md  recommend.md  search.md  social.md  track.md
docs/architecture/: config-system.md  llm-module.md  monitoring.md  overview.md  pipeline.md  storage.md
docs/modules/: config.md  (+4 more)
experiment/: __init__.py  manager.py  models.py
feature/: platform.py
llm/: base.py  factory.py  router.py
monitor/: collector.py  metrics.py  schema.py  tracer.py  training_logger.py  writer.py
pipeline/: base.py  context.py  executor.py
scripts/: backfill_features.py  generate_embeddings.py  seed_test_data.py  train_ranking.py  train_two_tower.py
server/: app.py  grpc_server.py  lifespan.py
storage/: clickhouse.py  faiss.py  mysql.py  redis.py
tests/: conftest.py
utils/: hash.py  logger.py  serialization.py  timer.py
(+175 files in other folders)
